Enable JEP-519